log/build_2025-02-13_13-12-22/rrt_package/stderr.log
  File "/home/shibin/ros2_ws/install/rrt_package/lib/python3.10/site-packages/rrt_package/my_node2.py", line 136
    nearest_obstacle = min(self.obstacles, 
                          ^
SyntaxError: '(' was never closed

